test/runtime/fail/expr/missing_quote.hy

// expect error: Unterminated string literal

let a = "hello
